--- a/video_calling/index.html
+++ b/video_calling/index.html
@@ -106,7 +106,7 @@
 
           // Redirect to home.html after a short delay (e.g., 2 seconds)
           setTimeout(function () {
-            window.location.href = "http://localhost:3000/home/0";
+            window.location.href = "https://virtual-clinic.codewithvyoma.ninja/home/0";
           }, 2000);  // Adjust the delay as needed
         }
       };
